<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/pref_cat_server">

        <Preference
            android:key="server_url"
            android:title="@string/pref_server_url"
            android:summary="@string/not_set" />

        <Preference
            android:key="test_connection"
            android:title="@string/pref_test_connection"
            android:summary="@string/pref_test_connection_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_display">

        <ListPreference
            android:key="view_mode"
            android:title="@string/pref_view_mode"
            android:summary="%s"
            android:entries="@array/view_mode_entries"
            android:entryValues="@array/view_mode_values"
            android:defaultValue="MOBILE" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_data">

        <Preference
            android:key="clear_cache"
            android:title="@string/pref_clear_cache"
            android:summary="@string/pref_clear_cache_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_about">

        <Preference
            android:key="about"
            android:title="@string/pref_about_version"
            android:selectable="false" />

        <Preference
            android:key="github"
            android:title="@string/pref_github"
            android:summary="https://github.com/1williamaoayers/hermes-web-ui" />

    </PreferenceCategory>

</PreferenceScreen>
